# looties-contract

./: Anchor.toml  looties_contract-keypair.json  package-lock.json  package.json  readme.md
cli/: scripts.ts  types.ts
programs/looties-contract/: Cargo.toml
programs/looties-contract/src/: account.rs  constants.rs  context.rs  error.rs  lib.rs  processor.rs
programs/looties-contract/src/instructions/: add_reward_to_temp_box.rs  add_token_address.rs  change_admin.rs  change_super_admin.rs  claim_reward.rs  claim_reward_nfts.rs  claim_reward_token.rs  deposit.rs  deposit_nfts.rs  deposit_sol.rs  deposit_token.rs  init_box.rs  init_temp_box.rs  initialize.rs  mod.rs  open_box.rs  remove_box.rs  update_box.rs  withdraw.rs  withdraw_nfts.rs  withdraw_sol.rs  withdraw_token.rs
programs/looties-contract/src/state/: box_pool.rs  global_pool.rs  mod.rs  player_pool.rs  prize_pool.rs
tests/: looties-contract.ts
