[package]
name = "looties-contract"
version = "0.1.0"
description = "Created with goup9"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "looties_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"]}
sha2 = "0.10.8"
solana-program = "1.17.7"
spl-associated-token-account = "2.2.0"
